<resources>
    <string name="app_name">Groupshare</string>
    <string name="facebook_app_id">275772362761112</string>
    <string name="fb_login_protocol_scheme">fb275772362761112</string>
    <string name="fb_access_token_expires">fb_access_token_expires</string>
    <string name="fb_access_token">fb_access_token</string>
    <string name="facebook_session">facebook_session</string>
    <string name="fb_login_error">Something went wrong</string>
    <string name="login_cancelled">Login cancelled</string>
    <string name="logged_in">Logged in successfully</string>
    <string name="add_group">Add Group</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="group_name">Group Name</string>
    <string name="forward_image">forward image</string>
    <string name="groups">Groups</string>
    <string name="todo_list_text">This stuff needs to be done</string>
    <string name="please_login_with_facebook_n_to_start_using_groupshare">Please login with Facebook \n to start using GroupShare:</string>
    <string name="welcome">Welcome!</string>
    <string name="remove_todo_item">remove todo item</string>
    <string name="save_group_error">Something went wrong, try again!</string>
    <string name="group_menu">Group Menu</string>
    <string name="invite_friends">Invite friends</string>
    <string name="delete_group">Delete group</string>
    <string name="invite_friends_success">Successfully added the selected friends to the group!</string>
    <string name="description">Description</string>
    <string name="add_todo_item_button">add todo item button</string>
    <string name="no_connection">No connection found</string>
    <string name="change_this_text">Change this text</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_group">Create Group</string>
    <string name="image_of_friend">image of friend</string>
    <string name="add_event">Add event</string>
    <string name="save">Save</string>
    <string name="event_name_hint">Enter title, description…</string>
    <string name="event_start_date_hint">Start date…</string>
    <string name="event_end_date_hint">End date…</string>
    <string name="event_location_hint">Enter location…</string>
    <string name="event_color_hint">Event color…</string>
    <string name="event_color_selected">Event color</string>
    <string name="delete_event_dialog">Do you want to delete this event?</string>
    <string name="start_time_hint">Start time…</string>
    <string name="end_time_hint">End time…</string>
    <string name="add_event_fill_fields">Please enter name, date and time!</string>
    <string name="groupshare_logo">Groupshare Logo</string>
    <string name="event_name_image">Event name image</string>
    <string name="event_time_image">Event time image</string>
    <string name="event_location_image">Event location image</string>
    <string name="event_color_image">Event color image</string>
</resources>
