<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/group_list_7"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="dk.iha.itsmap.f16.grp03.groupshare.activities.AddEventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_event_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/AppTheme.Toolbar" />

    <LinearLayout
        android:id="@+id/event_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_event_toolbar"
        android:layout_margin="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/event_name_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/event_name_image" />

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/event_name_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider_name_time"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/event_name_layout"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_name_time"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/event_time_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:drawable/ic_menu_recent_history"
            android:contentDescription="@string/event_time_image" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/event_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/event_start_date_hint"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/event_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="end"
                android:hint="@string/start_time_hint"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/event_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_start_date"
                android:hint="@string/event_end_date_hint"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/event_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/event_start_date"
                android:gravity="end"
                android:hint="@string/end_time_hint"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />


        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider_time_location"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/time_layout"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/event_location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_time_location"
        android:layout_margin="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/event_location_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:drawable/ic_menu_mylocation"
            android:contentDescription="@string/event_location_image" />

        <EditText
            android:id="@+id/event_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/event_location_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider_location_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/event_location_layout"
        android:background="@android:color/white" />

    <LinearLayout
        android:id="@+id/event_color_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_location_color"
        android:layout_margin="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/event_color_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/color_viewer"
            android:contentDescription="@string/event_color_image" />

        <TextView
            android:id="@+id/event_color_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/event_color_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>


</RelativeLayout>
